# lab-1-kafka-broker

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_qa.txt
.github/workflows/: code_style.yml
client/: Dockerfile  main.py  requirements.txt  run.sh
eda/: EDA.ipynb  requirements.txt
lib/: pipeline.py  topics.py
lib/broker/: consumer.py  producer.py
model/: classifier.joblib  encoder.joblib  scaler.joblib
scripts/: download_dataset.sh  init_broker.sh
services/: constants.py
services/data_producer/: Dockerfile  main.py  requirements.txt  run.sh
services/inference/: Dockerfile  main.py  requirements.txt  run.sh
services/preprocessor/: Dockerfile  main.py  requirements.txt  run.sh
