[project]
name = "Lab-KAFKA"
version = "0.0.0"

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint."MAIN"]
ignore = ["venv"]

[tool.pylint."FORMAT"]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "broad-exception-caught"
]

[[tool.mypy.overrides]]
module = ["sklearn.*", "progressbar.*", "joblib.*", "kagglehub.*"]
follow_untyped_imports = true
